overrides to fix logo and css on mobile

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -26,3 +26,23 @@
 .md-search__button::before {
     background-color: #ffffff;
 }
+
+.md-header__button.md-logo {
+    font-weight: 700;
+    font-size: .9rem;
+}
+
+@media screen and (max-width: 76.2344em) {
+    .md-sidebar--primary {
+        background-color: #ffffff;
+    }
+
+    .md-nav .md-nav__title[for="__drawer"] {
+        font-size: 0rem;
+        display: inline-block;
+    }
+
+    .md-nav .md-nav__title[for="__drawer"] .md-logo {
+        font-size: 0.9rem;
+    }
+}
